<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">特长汇</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mainAty_homeTabHostText">首页</string>
    <string name="mainAty_secondTabHostText">特长</string>
    <string name="mainAty_thirdTabHostText">我的</string>
    <string name="mainAty_forthTabHostText">设置</string>
    <string name="btn_sports">运动</string>
    <string name="btn_photograph">摄影</string>
    <string name="btn_instrument">乐器</string>
    <string name="btn_art">美工</string>
    <string name="btn_game">游戏</string>
    <string name="btn_study">学习</string>
    <string name="btn_computer">电脑</string>
    <string name="btn_more">更多</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="special_kind_home">特长分类</string>
    <string name="guess_like_home">猜你喜欢</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account_hint">手机号或账号名</string>
    <string name="psd_hint">请输入密码</string>
    <string name="service_text">联系客服</string>
    <string name="lost_psd">忘记密码？</string>
    <string name="tel_hint">请输入手机号</string>
    <string name="verify_hint">请输入验证码</string>
    <string name="get_verify">获取验证码</string>
    <string name="my_goods">我的订单</string>
    <string name="my_text">我的</string>
</resources>
