<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/WHITE" >
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/login"
        android:background="@drawable/biankuang_stroke"	
        android:gravity="center"/>
    <EditText android:id="@+id/et_account_loginAty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/account_hint"
        android:background="@drawable/biankuang_stroke"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"/>
    <EditText android:id="@+id/et_pwd_loginAty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:hint="@string/psd_hint"
        android:background="@drawable/biankuang_stroke"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"/>
    <Button android:id="@+id/btn_login_loginAty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:hint="@string/login"
        android:gravity="center"
        android:background="@color/BLUE"
        android:textColor="@color/BLACK"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"/>
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/service_text"
            android:textColor="@color/font_gray"
            android:background="@color/WHITE"/>
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/lost_psd"
            android:textColor="@color/font_gray"
            android:background="@color/WHITE"/>
    </RelativeLayout>
</LinearLayout>