<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/WHITE" >
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/biankuang_stroke"	>
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back_g"
            android:scaleType="center"/>
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_gravity="center"/>
    </FrameLayout>
    <EditText android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/biankuang_stroke"
        android:hint="@string/tel_hint"/>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">
        <EditText android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/biankuang_stroke"
        android:layout_weight="1"
        android:layout_marginRight="10dp"
        android:hint="@string/verify_hint"/>
        <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/BLUE"
        android:layout_weight="1"
        android:hint="@string/get_verify"/>
    </LinearLayout>
    <EditText android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/biankuang_stroke"
        android:hint="@string/psd_hint"/>
    <EditText android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/BLUE"
        android:hint="@string/register"/>
</LinearLayout>