<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/bg_gray"  >
    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/WHITE">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp">
            <Button
                android:id="@+id/btn_photograph"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/button_white"
                android:button="@null"
                android:text="@string/btn_photograph"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/btn_photograph"
                android:drawablePadding="6dp"
                android:textSize="14sp"
                android:textColor="@color/font_black"/>
            <Button
                android:id="@+id/btn_game"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/button_white"
                android:button="@null"
                android:text="@string/btn_game"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/btn_game"
                android:drawablePadding="6dp"
                android:textSize="14sp"
                android:textColor="@color/font_black"/>
            <Button
                android:id="@+id/btn_art"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/button_white"
                android:button="@null"
                android:text="@string/btn_art"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/btn_art"
                android:drawablePadding="6dp"
                android:textSize="14sp"
                android:textColor="@color/font_black"/>
            <Button
                android:id="@+id/btn_computer"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/button_white"
                android:button="@null"
                android:text="@string/btn_computer"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/btn_computer"
                android:drawablePadding="6dp"
                android:textSize="14sp"
                android:textColor="@color/font_black"/>
    	</TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp">
        	<Button
            	android:id="@+id/btn_study"
            	android:layout_height="wrap_content"
            	android:layout_width="wrap_content"
            	android:layout_weight="1.0"
            	android:background="@drawable/button_white"
            	android:button="@null"
            	android:text="@string/btn_study"
            	android:gravity="center_horizontal"
            	android:drawableTop="@drawable/btn_study"
            	android:drawablePadding="6dp"
            	android:textSize="14sp"
            	android:textColor="@color/font_black"/>
        	<Button
            	android:id="@+id/btn_instrument"
            	android:layout_height="wrap_content"
           		android:layout_width="wrap_content"
            	android:layout_weight="1.0"
            	android:background="@drawable/button_white"
            	android:button="@null"
            	android:text="@string/btn_instrument"
            	android:gravity="center_horizontal"
            	android:drawableTop="@drawable/btn_instrument"
            	android:drawablePadding="6dp"
            	android:textSize="14sp"
            	android:textColor="@color/font_black"/>
        	<Button
            	android:id="@+id/btn_sports"
            	android:layout_height="wrap_content"
            	android:layout_width="wrap_content"
            	android:layout_weight="1.0"
            	android:background="@drawable/button_white"
            	android:button="@null"
            	android:text="@string/btn_sports"
            	android:gravity="center_horizontal"
            	android:drawableTop="@drawable/btn_sports"
            	android:drawablePadding="6dp"
            	android:textSize="14sp"
            	android:textColor="@color/font_black"/>
        	<Button
            	android:id="@+id/btn_more"
            	android:layout_height="wrap_content"
            	android:layout_width="wrap_content"
            	android:layout_weight="1.0"
            	android:background="@drawable/button_white"
            	android:button="@null"
            	android:text="@string/btn_more"
            	android:gravity="center_horizontal"
            	android:drawableTop="@drawable/btn_more"
            	android:drawablePadding="6dp"
            	android:textSize="14sp"
            	android:textColor="@color/font_black"/>
    	</TableRow>
    </TableLayout>

</LinearLayout>
